--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,10 @@
 <body>
    <div class="main-content">
       {{>header}}
+      <p class="info">This app was created by me, Femi Ologunwa, as the first project from my learnig of node.js. I
+         fetched weather data from an external service. The
+         coding journey
+         was a great experience</p>
       <img class="portrait" src="/img/person.jpg" />
    </div>
 
